<resources>
    <string name="app_name">My Android Laboratory</string>
    <string name="auto_fill_hints"> </string>
    <string name="hint"> </string>
    <string name="gravity_x">Gravity_X</string>
    <string name="gravity_y">Gravity_Y</string>
    <string name="gravity_z">Gravity_Z</string>
    <string name="linear_accelerometer_x">Linear_Accelerometer_X</string>
    <string name="linear_accelerometer_y">Linear_Accelerometer_Y</string>
    <string name="linear_accelerometer_z">Linear_Accelerometer_Z</string>
    <string name="rotation_vector_x">Rotation_Vector_X</string>
    <string name="rotation_vector_y">Rotation_Vector_Y</string>
    <string name="rotation_vector_z">Rotation_Vector_Z</string>
    <string name="rotation_vector_scalar">Rotation_Vector_Scalar</string>
    <string name="content_description"> </string>
</resources>
